--- a/libs/designer-ui/src/lib/html/htmleditor.less
+++ b/libs/designer-ui/src/lib/html/htmleditor.less
@@ -1,4 +1,4 @@
-.toolbar {
+.msla-html-editor-toolbar {
   display: flex;
   margin-bottom: 1px;
   background: #fff;
@@ -8,109 +8,105 @@
   vertical-align: middle;
   overflow: auto;
   height: 36px;
-}
-.toolbar button.toolbar-item {
-  border: 0;
-  display: flex;
-  background: none;
-  border-radius: 10px;
-  padding: 8px;
-  cursor: pointer;
-  vertical-align: middle;
-  flex-shrink: 0;
-  align-items: center;
-  justify-content: space-between;
-}
-.toolbar button.toolbar-item:disabled {
-  cursor: not-allowed;
-}
-.toolbar button.toolbar-item.spaced {
-  margin-right: 2px;
+  button.toolbar-item {
+    border: 0;
+    display: flex;
+    background: none;
+    border-radius: 10px;
+    padding: 8px;
+    cursor: pointer;
+    vertical-align: middle;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: space-between;
+  }
+  button.toolbar-item:disabled {
+    cursor: not-allowed;
+  }
+  button.toolbar-item img.format {
+    background-size: contain;
+    display: inline-block;
+    height: 18px;
+    width: 18px;
+    vertical-align: -0.25em;
+    display: flex;
+    opacity: 0.6;
+  }
+  button.toolbar-item:disabled img.format {
+    opacity: 0.2;
+  }
+  button.toolbar-item.active {
+    background-color: rgba(223, 232, 250, 0.3);
+  }
+
+  button.toolbar-item.active img {
+    opacity: 1;
+  }
+
+  .toolbar-item:hover:not([disabled]) {
+    background-color: #eee;
+  }
+
+  .toolbar-item.block-controls {
+    width: 80px;
+  }
+
+  .toolbar-item.font-family {
+    width: 70px;
+  }
+
+  .toolbar-item.font-family .text {
+    display: block;
+  }
+
+  .toolbar-item.font-size .text {
+    padding-right: 10px;
+  }
+  .toolbar-item {
+    .text {
+      line-height: 20px;
+      vertical-align: middle;
+      font-size: 14px;
+      color: #777;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      height: 20px;
+      text-align: left;
+    }
+    .icon {
+      width: 20px;
+      height: 20px;
+      user-select: none;
+      margin-right: 8px;
+      line-height: 16px;
+      background-size: contain;
+    }
+  }
+
+  img.chevron-down {
+    margin-top: 3px;
+    width: 16px;
+    height: 16px;
+    display: flex;
+    user-select: none;
+  }
+  img.chevron-down.inside {
+    width: 16px;
+    height: 16px;
+    display: flex;
+    margin-left: -25px;
+    margin-top: 11px;
+    margin-right: 10px;
+    pointer-events: none;
+  }
+  .divider {
+    width: 1px;
+    background-color: #eee;
+    margin: 0 4px;
+  }
 }
 
-.toolbar button.toolbar-item img.format {
-  background-size: contain;
-  display: inline-block;
-  height: 18px;
-  width: 18px;
-  vertical-align: -0.25em;
-  display: flex;
-  opacity: 0.6;
-}
-
-.toolbar button.toolbar-item:disabled img.format {
-  opacity: 0.2;
-}
-
-.toolbar button.toolbar-item.active {
-  background-color: rgba(223, 232, 250, 0.3);
-}
-
-.toolbar button.toolbar-item.active img {
-  opacity: 1;
-}
-
-.toolbar .toolbar-item:hover:not([disabled]) {
-  background-color: #eee;
-}
-
-.toolbar .toolbar-item.font-family .text {
-  display: block;
-  max-width: 40px;
-}
-
-.toolbar .code-language {
-  width: 150px;
-}
-
-.toolbar .toolbar-item .text {
-  display: flex;
-  line-height: 20px;
-  vertical-align: middle;
-  font-size: 14px;
-  color: #777;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  height: 20px;
-  text-align: left;
-  padding-right: 10px;
-}
-
-.toolbar .toolbar-item .icon {
-  display: flex;
-  width: 20px;
-  height: 20px;
-  user-select: none;
-  margin-right: 8px;
-  line-height: 16px;
-  background-size: contain;
-}
-
-.toolbar img.chevron-down {
-  margin-top: 3px;
-  width: 16px;
-  height: 16px;
-  display: flex;
-  user-select: none;
-}
-
-.toolbar img.chevron-down.inside {
-  width: 16px;
-  height: 16px;
-  display: flex;
-  margin-left: -25px;
-  margin-top: 11px;
-  margin-right: 10px;
-  pointer-events: none;
-}
-
-.toolbar .divider {
-  width: 1px;
-  background-color: #eee;
-  margin: 0 4px;
-}
-
-.dropdown {
+.msla-html-editor-dropdown-items-container {
   z-index: 1000001;
   display: block;
   position: fixed;
@@ -120,7 +116,7 @@
   background-color: #fff;
 }
 
-.dropdown .item {
+.msla-html-editor-dropdown-items-container .item {
   margin: 0 8px 0 8px;
   padding: 8px;
   color: #050505;
@@ -139,54 +135,52 @@
   min-width: 100px;
 }
 
-.dropdown .item.fontsize-item,
-.dropdown .item.fontsize-item .text {
-  min-width: unset;
-}
-
-.dropdown .item .active {
-  display: flex;
-  width: 20px;
-  height: 20px;
-  background-size: contain;
-}
-
-.dropdown .item:first-child {
-  margin-top: 8px;
-}
-
-.dropdown .item:last-child {
-  margin-bottom: 8px;
-}
-
-.dropdown .item:hover {
-  background-color: #eee;
-}
-
-.dropdown .item .text {
-  display: flex;
-  line-height: 20px;
-  flex-grow: 1;
-  min-width: 150px;
-}
-
-.dropdown .item .icon {
-  display: flex;
-  width: 20px;
-  height: 20px;
-  user-select: none;
-  margin-right: 12px;
-  line-height: 16px;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.dropdown .divider {
-  width: auto;
-  background-color: #eee;
-  margin: 4px 8px;
-  height: 1px;
+.msla-html-editor-dropdown-items-container {
+  .item.fontsize-item {
+    .text {
+      min-width: unset;
+    }
+  }
+  .item {
+    .active {
+      display: flex;
+      width: 20px;
+      height: 20px;
+      background-size: contain;
+    }
+    .text {
+      display: flex;
+      line-height: 20px;
+      flex-grow: 1;
+      min-width: 150px;
+    }
+    .icon {
+      display: flex;
+      width: 20px;
+      height: 20px;
+      user-select: none;
+      margin-right: 12px;
+      line-height: 16px;
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+  }
+  .item:first-child {
+    margin-top: 8px;
+  }
+  .item:last-child {
+    margin-bottom: 8px;
+  }
+  .item:hover {
+    background-color: #eee;
+  }
+  .divider {
+    width: auto;
+    background-color: #eee;
+    margin: 4px 8px;
+    height: 1px;
+  }
 }
 
 img.chevron-down {
@@ -197,32 +191,19 @@ img.chevron-down {
   width: 8px;
 }
 
-@media screen and (max-width: 1100px) {
-  .dropdown-button-text {
-    display: none !important;
-  }
-  .font-size .dropdown-button-text {
-    display: flex !important;
-  }
-  .code-language .dropdown-button-text {
-    display: flex !important;
-  }
-}
-
-button.item.dropdown-item-active {
+button.item.msla-dropdown-item-active {
   background-color: rgba(223, 232, 250, 0.3);
 }
 
-button.item.dropdown-item-active img {
+button.item.msla-dropdown-item-active img {
   opacity: 1;
 }
 
 .msla-html-editor {
   width: 100%;
-  margin: 20px auto 0px auto;
   border-radius: 2px;
   position: relative;
-  padding-bottom: 15px;
+  outline: 1px solid @panel-mode-panel-border-color;
   .editor-input {
     outline: none;
     margin: 1px;
@@ -230,6 +211,7 @@ button.item.dropdown-item-active img {
     font-size: 15px;
     tab-size: 1;
     padding-inline-start: 13px;
+    padding-bottom: 60px;
     &.readonly {
       background-color: rgba(128, 128, 128, 0.1);
     }
@@ -248,7 +230,7 @@ button.item.dropdown-item-active img {
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 95%;
-    margin-top: -20px;
+    margin-top: -80px;
     margin-left: 15px;
     font-size: 15px;
     user-select: none;
@@ -261,4 +243,114 @@ button.item.dropdown-item-active img {
   width: 1px;
   background-color: #eee;
   margin: 0 4px;
+}
+
+.Input__wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.Input__label {
+  display: flex;
+  flex: 1;
+  color: #666;
+}
+.Input__input {
+  display: flex;
+  flex: 2;
+  border: 1px solid #999;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  min-width: 0;
+}
+
+.color-picker-wrapper {
+  padding: 10px;
+  .color-picker-title {
+    text-align: center;
+    display: -webkit-box;
+    display: block;
+    padding-bottom: 5px;
+  }
+}
+
+.color-picker-basic-color {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 0;
+  padding: 0;
+}
+
+.color-picker-basic-color button {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  height: 16px;
+  width: 16px;
+  cursor: pointer;
+  list-style-type: none;
+}
+
+.color-picker-basic-color button.active {
+  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.color-picker-saturation {
+  width: 100%;
+  position: relative;
+  margin-top: 15px;
+  height: 150px;
+  background-image: linear-gradient(transparent, black), linear-gradient(to right, white, transparent);
+  user-select: none;
+}
+.color-picker-saturation_cursor {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  box-shadow: 0 0 15px #00000026;
+  box-sizing: border-box;
+  transform: translate(-10px, -10px);
+}
+.color-picker-hue {
+  width: 100%;
+  position: relative;
+  margin-top: 15px;
+  height: 12px;
+  background-image: linear-gradient(
+    to right,
+    rgb(255, 0, 0),
+    rgb(255, 255, 0),
+    rgb(0, 255, 0),
+    rgb(0, 255, 255),
+    rgb(0, 0, 255),
+    rgb(255, 0, 255),
+    rgb(255, 0, 0)
+  );
+  user-select: none;
+  border-radius: 12px;
+}
+
+.color-picker-hue_cursor {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  box-shadow: #0003 0 0 0 0.5px;
+  box-sizing: border-box;
+  transform: translate(-10px, -4px);
+}
+
+.color-picker-color {
+  border: 1px solid #ccc;
+  margin-top: 15px;
+  width: 100%;
+  height: 20px;
 }
