Added default recurrence values if there are none

--- a/libs/designer-ui/src/lib/recurrence/recurrence.less
+++ b/libs/designer-ui/src/lib/recurrence/recurrence.less
@@ -1,6 +1,7 @@
 @import (reference) '../variables.less';
 
 .msla-recurrence-editor {
+  flex: 1 1 auto;
   border: 1px dashed @defaultBorderColor;
   padding: 0 10px 10px 10px;
 }
