Update token selector props + fix styling for token picker editor.

--- a/libs/designer-ui/src/lib/settings/settings.less
+++ b/libs/designer-ui/src/lib/settings/settings.less
@@ -48,6 +48,10 @@
   font-size: 13px;
 }
 
+.msla-setting-token-editor-container {
+  .msla-setting-token-editor-container();
+}
+
 .msla-setting-property-editor-container {
   .msla-setting-token-editor-container(20px);
   width: 225px;
