--- a/libs/designer-ui/src/lib/arrayeditor/arrayeditor.less
+++ b/libs/designer-ui/src/lib/arrayeditor/arrayeditor.less
@@ -90,7 +90,10 @@
     padding: 0 @padding;
 
     .msla-array-item {
-      padding-left: 6px;
+      margin: 4px;
+      padding: 4px 4px 4px 4px;
+      border: 1px solid @defaultBorderColor;
+
       .msla-array-item-header {
         display: flex;
         justify-content: space-between;
