--- a/libs/designer-ui/src/lib/arrayeditor/arrayeditor.less
+++ b/libs/designer-ui/src/lib/arrayeditor/arrayeditor.less
@@ -114,7 +114,7 @@
           font-size: 15px;
           tab-size: 1;
           min-height: 30px;
-          line-height: 30px;
+          line-height: 20px;
           padding-inline-start: 5px;
           &.readonly {
             background-color: rgba(128, 128, 128, 0.1);
@@ -123,6 +123,8 @@
             outline: 2px solid @primary_focus_blue;
           }
           p {
+            padding-top: 5px;
+            padding-bottom: 2px;
             margin: 0;
           }
         }
@@ -133,7 +135,7 @@
           text-overflow: ellipsis;
           white-space: nowrap;
           width: 95%;
-          margin-top: -23px;
+          margin-top: -25px;
           margin-left: 5px;
           font-size: 15px;
           user-select: none;
