fix(designer): Integration of Complex Array Editor (#2233)
* temp

* update

* adding placeholders for complex array item

* css changes

* fix test

--- a/libs/designer-ui/src/lib/arrayeditor/arrayeditor.less
+++ b/libs/designer-ui/src/lib/arrayeditor/arrayeditor.less
@@ -90,7 +90,13 @@
     padding: 0 @padding;
 
     .msla-array-item {
-      padding-left: 6px;
+      margin-left: 6px;
+      &.complex {
+        margin: 4px;
+        padding: 4px 4px 4px 4px;
+        border: 1px solid @defaultBorderColor;
+      }
+
       .msla-array-item-header {
         display: flex;
         justify-content: space-between;
@@ -108,7 +114,7 @@
           font-size: 15px;
           tab-size: 1;
           min-height: 30px;
-          line-height: 30px;
+          line-height: 20px;
           padding-inline-start: 5px;
           &.readonly {
             background-color: rgba(128, 128, 128, 0.1);
@@ -117,6 +123,8 @@
             outline: 2px solid @primary_focus_blue;
           }
           p {
+            padding-top: 5px;
+            padding-bottom: 2px;
             margin: 0;
           }
         }
@@ -127,7 +135,7 @@
           text-overflow: ellipsis;
           white-space: nowrap;
           width: 95%;
-          margin-top: -23px;
+          margin-top: -25px;
           margin-left: 5px;
           font-size: 15px;
           user-select: none;
