--- a/libs/designer-ui/src/lib/tokenpicker/tokenpicker.less
+++ b/libs/designer-ui/src/lib/tokenpicker/tokenpicker.less
@@ -69,6 +69,7 @@
 .msla-token-picker-sections {
   box-sizing: border-box;
   overflow-y: auto;
+  min-height: 100px;
 }
 
 .msla-token-picker-section-header {
