--- a/libs/designer-ui/src/lib/authentication/authentication.less
+++ b/libs/designer-ui/src/lib/authentication/authentication.less
@@ -50,12 +50,11 @@
   position: relative;
   .editor-input {
     outline: 1px solid @panel-mode-panel-border-color;
-    margin: 1px;
     resize: none;
     font-size: 15px;
     tab-size: 1;
     min-height: 30px;
-    line-height: 30px;
+    line-height: 20px;
     padding-inline-start: 5px;
     &.readonly {
       background-color: rgba(128, 128, 128, 0.1);
@@ -64,6 +63,8 @@
       outline: 2px solid @primary_focus_blue;
     }
     p {
+      padding-top: 5px;
+      padding-bottom: 2px;
       margin: 0;
     }
   }
@@ -74,7 +75,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 95%;
-    margin-top: -28px;
+    margin-top: -25px;
     margin-left: 5px;
     font-size: 15px;
     user-select: none;
