complex array editor

--- a/libs/designer-ui/src/lib/arrayeditor/arrayeditor.less
+++ b/libs/designer-ui/src/lib/arrayeditor/arrayeditor.less
@@ -18,8 +18,7 @@
     flex: 1 1 100%;
 
     &.msla-array-editor-collapsed {
-      padding: 10px 0px 40px @padding;
-      display: flex;
+      padding: 10px 0px 25px @padding;
 
       .msla-input-parameter-label {
         align-self: center;
@@ -181,7 +180,7 @@
   }
   .msla-collapsed-editor-validation {
     width: 50%;
-    position: relative;
+    position: absolute;
     color: rgb(224, 2, 2);
     left: 4px;
     font-size: 14px;
