--- a/libs/designer-ui/src/lib/picker/picker.less
+++ b/libs/designer-ui/src/lib/picker/picker.less
@@ -54,7 +54,9 @@ a.msla-picker {
 
 .msla-picker-items-error {
   color: rgb(224, 2, 2);
-  height: 30px;
+  overflow-y: auto;
+  min-height: 30px;
+  max-height: @maxPickerHeight;
   padding-left: 20px;
   padding-top: 10px;
 }
