quick styling change

--- a/libs/designer-ui/src/lib/picker/picker.less
+++ b/libs/designer-ui/src/lib/picker/picker.less
@@ -57,8 +57,7 @@ a.msla-picker {
   overflow-y: auto;
   min-height: 30px;
   max-height: @maxPickerHeight;
-  padding-left: 20px;
-  padding-top: 10px;
+  padding: 10px 20px;
 }
 
 .msla-picker-items {
