floating link editor

--- a/libs/designer-ui/src/lib/html/htmleditor.less
+++ b/libs/designer-ui/src/lib/html/htmleditor.less
@@ -395,6 +395,9 @@ img.chevron-down {
       max-width: 78%;
     }
   }
+  &.inverted {
+    background-color: rgb(27, 26, 25);
+  }
 }
 
 .msla-theme-dark {
