Add 'search' function for conditional param dropdown

--- a/libs/designer/src/lib/ui/styles.less
+++ b/libs/designer/src/lib/ui/styles.less
@@ -1,4 +1,5 @@
 @import '../../../../designer-ui/src/styles.less';
+@import './settings/settingsection.less';
 @import './settings/sections/runafterconfiguration/runafterconfiguration.less';
 @import './connections/runAfterIndicator/styles.less';
 @import (css) '~reactflow/dist/style.css';
